--- a/scss/layout/_concierge.scss
+++ b/scss/layout/_concierge.scss
@@ -66,7 +66,7 @@
 
   @media (max-width: 992px) {
     gap: 32px;
-    grid-template-columns: repeat(auto-fill, minmax(142px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     justify-items: center;
   }
 }
